--- a/index.html
+++ b/index.html
@@ -9,98 +9,77 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 </head>
-<style>
-  body {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    background-color: #f8f9fa;
-    transition: background-color 0.3s ease;
-    color: #333;
-  }
-
-  .container {
-    margin-top: 20px;
-  }
-
-  .card {
-    margin-bottom: 20px;
-    border: none;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-
-  .card-header {
-    background-color: #3498db;
-    color: #fff;
-    border: none;
-  }
-
-  .btn-primary {
-    background-color: #2ecc71;
-    border-color: #2ecc71;
-    color: #fff;
-    transition: background-color 0.3s ease;
-  }
-
-  .btn-primary:hover {
-    background-color: #27ae60;
-    border-color: #27ae60;
-  }
-
-  .btn-warning {
-    background-color: #f39c12;
-    border-color: #f39c12;
-    color: #fff;
-    transition: background-color 0.3s ease;
-  }
-
-  .btn-warning:hover {
-    background-color: #d35400;
-    border-color: #d35400;
-    color: #fff;
-  }
-
-  .btn-danger {
-    background-color: #e74c3c;
-    border-color: #e74c3c;
-    color: #fff;
-    transition: background-color 0.3s ease;
-  }
-
-  .btn-danger:hover {
-    background-color: #c0392b;
-    border-color: #c0392b;
-  }
-
-  .app-title {
-    text-align: center;
-    margin-bottom: 20px;
-  }
-
-  .form-container {
-    max-width: 1000px;
-    margin: 0 auto;
-  }
-
-  .form-container form {
-    width: 500px;
-    margin: 0 auto;
-  }
-
-  @media (max-width: 767px) {
-  .form-container form {
-      width: 300px;
-      padding: 0 auto;
-    }
-  }
-
-  .data-container {
-    margin-top: 20px;
-  }
-
-  .total-container {
-    margin-top: 20px;
-  }
-</style>
 <body>
+  <div class="container">
+    <div class="app-title">
+        <h1>KASIR MIE AYAM GILAR-GILAR</h1>
+    </div>
+    <div class="row">
+        <!-- Form untuk menambah/mengedit Barang -->
+        <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">Input Item</div>
+                <div class="card-body form-container">
+                    <form>
+                        <div class="mb-3">
+                            <label for="namaBarang" class="form-label">Nama Item</label>
+                            <select class="form-select" id="nama">
+                                <option value="mie_ayam">Mie Ayam</option>
+                                <option value="mie_ayam_bakso">Mie Ayam Bakso</option>
+                                <option value="mie_ayam_pangsit">Mie Ayam Pangsit</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="harga" class="form-label">Harga</label>
+                            <select class="form-select" id="harga">
+                                <option value="16000">Rp 16.000</option>
+                                <option value="19000">Rp 19.000</option>
+                                <option value="20000">Rp 20.000</option>
+                            </select>
+                        </div>
+                        <div class="mb-3">
+                            <label for="stok" class="form-label">Total Pesanan</label>
+                            <input type="number" class="form-control" id="stok" placeholder="Masukkan jumlah pesanan" onkeypress="app.allowNumbersOnly(event)">
+                        </div>
+                        <button type="button" id="tambah-update-btn" class="btn btn-primary">Tambah</button>
+                        <button type="button" class="btn btn-warning" id="reset-btn">Reset</button>
+                    </form>
+
+                    </div>
+                </div>
+            </div>
+            <!-- Daftar Barang -->
+            <div class="col-md-6">
+            <div class="card">
+                <div class="card-header">List Item</div>
+                <div class="card-body data-container">
+                    <table class="table table-bordered">
+                        <thead>
+                            <tr>
+                                <th>Nama</th>
+                                <th>Total</th>
+                                <th>Harga</th>
+                                <th>Total Harga</th>
+                                <th>Action</th>
+                            </tr>
+                        </thead>
+                        <tbody id="daftar-barang-container"></tbody>
+                    </table>
+                </div>
+            </div>
+            </div>
+        </div>
+        <!-- Total Harga -->
+        <div class="row">
+            <div class="col-md-12">
+            <div class="card">
+                <div class="card-header">Total Harga</div>
+                <div class="card-body total-container" id="total-harga-container"></div>
+            </div>
+            </div>
+        </div>
+    </div>
+  </div>
   <script>
     // Kelas untuk merepresentasikan Barang
     class Barang {
@@ -120,80 +99,6 @@
       }
 
       init() {
-        const container = document.createElement('div');
-        container.className = 'container';
-        container.innerHTML = `
-        <div class="app-title">
-    <h1>KASIR MIE AYAM GILAR-GILAR</h1>
-</div>
-<div class="row">
-    <!-- Form untuk menambah/mengedit Barang -->
-    <div class="col-md-6">
-        <div class="card">
-            <div class="card-header">Input Item</div>
-            <div class="card-body form-container">
-                <form>
-                    <div class="mb-3">
-                        <label for="namaBarang" class="form-label">Nama Item</label>
-                        <select class="form-select" id="nama">
-                            <option value="mie_ayam">Mie Ayam</option>
-                            <option value="mie_ayam_bakso">Mie Ayam Bakso</option>
-                            <option value="mie_ayam_pangsit">Mie Ayam Pangsit</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="harga" class="form-label">Harga</label>
-                        <select class="form-select" id="harga">
-                            <option value="16000">Rp 16.000</option>
-                            <option value="19000">Rp 19.000</option>
-                            <option value="20000">Rp 20.000</option>
-                        </select>
-                    </div>
-                    <div class="mb-3">
-                        <label for="stok" class="form-label">Total Pesanan</label>
-                        <input type="number" class="form-control" id="stok" placeholder="Masukkan jumlah pesanan" onkeypress="app.allowNumbersOnly(event)">
-                    </div>
-                    <button type="button" id="tambah-update-btn" class="btn btn-primary">Tambah</button>
-                    <button type="button" class="btn btn-warning" id="reset-btn">Reset</button>
-                </form>
-
-                </div>
-              </div>
-            </div>
-            <!-- Daftar Barang -->
-            <div class="col-md-6">
-              <div class="card">
-                <div class="card-header">List Item</div>
-                <div class="card-body data-container">
-                  <table class="table table-bordered">
-                    <thead>
-                      <tr>
-                        <th>Nama</th>
-                        <th>Total</th>
-                        <th>Harga</th>
-                        <th>Total Harga</th>
-                        <th>Action</th>
-                      </tr>
-                    </thead>
-                    <tbody id="daftar-barang-container"></tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-          </div>
-          <!-- Total Harga -->
-          <div class="row">
-            <div class="col-md-12">
-              <div class="card">
-                <div class="card-header">Total Harga</div>
-                <div class="card-body total-container" id="total-harga-container"></div>
-              </div>
-            </div>
-          </div>
-        `;
-
-        document.body.appendChild(container);
-
         // Event listeners menggunakan addEventListener
         document.getElementById('tambah-update-btn').addEventListener('click', () => this.app.addBarang());
         document.getElementById('reset-btn').addEventListener('click', () => this.app.resetForm());
